Fix problem with multiple .subscription_msg visibility

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -202,11 +202,13 @@
         text-decoration: none;
         transition: 0.2s;
 
+        @media (min-width:1024px) {
             :hover {
                 background-color: $blue;
                 color: white;
                 cursor: pointer;
             }
+        }
         }
     }
 }
